<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/food_image"
        android:scaleX="1.2"
        android:contentDescription="@string/food_image"/>


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="@dimen/fui_auth_method_button_width"
        android:scaleX="0.8"
        android:background="@drawable/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go4lunch"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />



    <Button
        android:id="@+id/email_button"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/facebook_button"/>

    <Button
        android:id="@+id/facebook_button"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_facebook"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/google_button"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toTopOf="@+id/twitter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/twitter_button"
        style="@style/FirebaseUI.Button.AccountChooser.TwitterButton"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>