<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/go4LunchThemeColor"
        app:title="@string/title_activity_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />


    <TextView
        android:id="@+id/notification_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/notifications_on_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_page_toolbar"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/notification_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notification_text_view"
        app:layout_constraintBottom_toBottomOf="@id/notification_text_view"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:layout_marginTop="50dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        app:layout_constraintTop_toBottomOf="@id/notification_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>