<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/restaurants_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/restaurant_image"
        android:contentDescription="@string/image_restaurant"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/restaurant_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/restaurant_type_and_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/restaurant_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/restaurant_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/restaurant_name"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_image"/>

    <TextView
        android:id="@+id/restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/restaurant_image"
        app:layout_constraintEnd_toStartOf="@id/restaurant_image"/>

    <ImageView
        android:id="@+id/restaurant_workmates"
        android:contentDescription="@string/workmates"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/restaurant_workmates_number"/>

    <TextView
        android:id="@+id/restaurant_workmates_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/restaurant_image"/>

    <ImageView
        android:id="@+id/restaurant_stars"
        android:contentDescription="@string/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_image"
        app:layout_constraintEnd_toStartOf="@id/restaurant_image"/>





</androidx.constraintlayout.widget.ConstraintLayout>
