<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.RestaurantDetailsActivity">


    <ImageView
        android:id="@+id/restaurant_details_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/image_restaurant"
        app:layout_constraintBottom_toTopOf="@id/name_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/go4LunchThemeColor"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_restaurant_24"
        app:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_image"
        app:layout_constraintBottom_toTopOf="@id/name_constraint_layout"
        app:layout_constraintEnd_toEndOf="@id/restaurant_details_image"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uncheck_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_restaurant_24"
        android:visibility="gone"
        app:backgroundTint="@color/Activate"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_image"
        app:layout_constraintBottom_toTopOf="@id/name_constraint_layout"
        app:layout_constraintEnd_toEndOf="@id/restaurant_details_image"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/go4LunchThemeColor"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/call_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_details_image">

        <ImageView
            android:id="@+id/restaurant_details_star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stars"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_name"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_name"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_name"
            android:background="@drawable/baseline_star_white_24"/>

        <ImageView
            android:id="@+id/restaurant_details_star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stars"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_name"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_star_1"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_name"
            android:background="@drawable/baseline_star_white_24"/>

        <ImageView
            android:id="@+id/restaurant_details_star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stars"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_name"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_star_2"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_name"
            android:background="@drawable/baseline_star_white_24"/>

        <TextView
            android:id="@+id/restaurant_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/restaurant_details_type_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_name"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/call_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_constraint_layout"
        app:layout_constraintEnd_toStartOf="@+id/like_constraint_layout">

        <ImageView
            android:id="@+id/restaurant_details_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_button"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/baseline_phone_24"/>

        <TextView
            android:id="@+id/restaurant_details_call_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textAlignment="center"
            android:textColor="@color/go4LunchThemeColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_details_call_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/like_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="@id/call_constraint_layout"
        app:layout_constraintStart_toEndOf="@+id/call_constraint_layout"
        app:layout_constraintEnd_toStartOf="@+id/website_constraint_layout">

        <ImageView
            android:id="@+id/restaurant_details_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/like_button"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/baseline_star_color_24" />

        <TextView
            android:id="@+id/restaurant_details_like_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textAlignment="center"
            android:textColor="@color/go4LunchThemeColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_like_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/website_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="@+id/call_constraint_layout"
        app:layout_constraintStart_toEndOf="@+id/like_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/restaurant_details_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:contentDescription="@string/website_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/baseline_public_24" />

        <TextView
            android:id="@+id/restaurant_details_website_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/go4LunchThemeColor"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_details_website_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurant_details_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/call_constraint_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>